Tournament fixes
- Fixed tournaments crashing due to bad standings calculations after round 1
- Fixed the modified median standings producer to now properly calculate median and cumulative scores, and properly tiebreak between all tiebreaker methods.
- Overhauled the tournament display screen to show all the tiebreaker methods, and to include a link to the report generator so I don't have to remember the damn URL.
- Added a hall pop-up whenever tournament updates are received, only for players who have joined a tournament.